--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,13 +7,24 @@
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
+            <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
+            <link rel="stylesheet" href="{{ asset('assets/css/fonts6/css/all.css') }}">
+            
         {% endblock %}
 
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
+            <script type="text/javascript" src="{{ asset('assets/js/bootstrap.min.js') }}"></script>
         {% endblock %}
+                
     </head>
+    
     <body>
-        {% block body %}{% endblock %}
+        {% include('include/_navbar.html.twig') %}
+        {% block body %}                
+    
+        {% endblock %}
+            
+        
     </body>
 </html>
