--- a/templates/include/_navbar.html.twig
+++ b/templates/include/_navbar.html.twig
@@ -17,6 +17,9 @@
 				<li>
 					<a class="nav-link" aria-current="page" href="{{ path('app_category_index') }}">Categories</a>
 				</li>
+				<li>
+					<a class="nav-link" aria-current="page" href="{{ path('app_commande_index') }}">Commandes</a>
+				</li>
 			{% endif %}
 		{% else %}
 			<li class="special">
