--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9,8 +9,9 @@ html, body
 
 /* Reglages Background */
 body{
-    background-color:rgb(63, 63, 63);
+    background-color:rgb(32, 32, 32);
     color:white;
+    font-size:20px;
 }
 /* Fin reglages Background */
 
@@ -118,20 +119,230 @@ body{
 
 /* Reglages cards home */
 
-.row{
+.container{
+    margin:48px 52px;
+}
+
+.products{
     display:flex;
-    overflow: hidden;
-    flex-wrap: wrap;
-    justify-content: center;
-    column-gap: 50px;
+    flex-wrap:wrap;
+    border-radius:25px;
+    box-shadow: -5px 5px 15px rgb(22, 22, 22);
+    background-color: rgb(73, 73, 73);
+    padding:14px 16px;
+    gap:10px;
 }
 
-.row .card-exterior{
-    height:480px;
-    width:360px;
+.product-card{
+
+    padding: 2%;
+    flex-basis:16%;
+    flex-grow: 1;
+    display:flex;
+    flex-direction: column;
+    border-radius: 23px;
+    align-items: center;
+    background-color: #b4b4b4;
 }
 
-.card-exterior .card-img{
-    max-height:273px;
+.product-image img{
+    max-width:100%;
+}
+.product-info{
+    color: black;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+.card-img{
+    width: 273px;
+    height: 273px;
 }
 /* Fin reglages cards home */
+
+/* Reglages Register/login/form */
+
+.container-form{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-login{
+    width:500px;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-normal{
+    display:flex;
+    flex-direction: column;
+    gap : 10px;
+    align-items: center;
+}
+
+.form-extra-text{
+    text-align: center;
+}
+
+.form-type input{
+    width:300px;
+    height:30px;
+}
+
+.form-type input{
+    width:300px;
+    height:30px;
+}
+
+.form-type i{
+    position: absolute;
+    margin-top: -18px;
+    margin-left: 280px;
+    color: gray;
+}
+
+.form-type.city  i {
+    margin-left: 274px;
+}
+
+.form-type.location-dot i{
+    margin-left:285px;
+}
+
+input,label {
+    display:block;
+}
+
+/* Buttons */
+.button-register{
+    margin:25px;
+    height:45px;
+    width:85px;
+    border:none;
+    background-color:#4caf50;
+    font-size:18px;
+    color:white;
+    border-radius:20px;
+
+}
+
+.button-login{
+    margin:25px;
+    height:45px;
+    width:95px;
+    border:none;
+    background-color:#4caf50;
+    font-size:18px;
+    color:white;
+    border-radius:20px;
+
+}
+.button-login:active{
+    background-color:#367e39;
+}
+
+.button-login:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.button-register:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.button-register:active{
+    background-color:#367e39;
+}
+
+.container-login{
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.warning-login{
+    margin:10px;
+    font-size:16px;
+}
+
+.warning-button{
+    margin:25px;
+    height:45px;
+    width:fit-content;
+    border:none;
+    background-color:#dfb707;
+    font-size:18px;
+    border-radius:20px;
+
+}
+.warning-button:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.warning-button:active{
+    background-color:#a58702;
+}
+.warning-button a{
+    text-decoration: none;
+    color:black;
+}
+
+.danger-button-sm{
+    height:25px;
+    width:fit-content;
+    border:none;
+    background-color:#b80600;
+    font-size:14px;
+    color:white;
+    border-radius:5px;
+}
+
+.danger-button-sm:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.danger-button-sm:active {
+    background-color:#7c0400;
+}
+
+/* Fin buttons */
+
+/* Panier */
+
+.container-achat{
+    display:flex;
+    flex-direction: column;
+    gap:50px;
+}
+
+.product-container{
+    display:flex;
+    flex-direction: row;
+    max-width:680px;
+    border-radius: 10px;
+    background-color: #333;
+    padding:14px;
+    gap:10px;
+}
+
+.product-image{
+    width:110px;
+    height:110px;
+}
+.product-image img{
+    width:110px;
+    height:110px;
+}
+
+.price{
+    margin-top:40px;
+}
+
+.product-detail {
+    display:flex;
+    flex-direction: column;
+}
+
+.fa-square-minus,.fa-square-plus{
+    color:grey;
+}
