--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,10 +7,11 @@
 
 {% block body %}
 	<div class="container">
-		<div class="row">
+		<section class="products">
+
 			{% for product in products %}
 				{% include('include/_card.html.twig') %}
 			{% endfor %}
-		</div>
+		</section>
 	</div>
 {% endblock %}
