--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -1,58 +1,50 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello PanierController!{% endblock %}
+{% block title %}Hello PanierController!
+{% endblock %}
 
 {% block body %}
 
-    <h1 class="titre-index">Index des paniers</h1>
-    <div class="flex-box">
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Nom du produit</th>
-                <th>Marque</th>
-                <th>Image</th>
-                <th>Prix unitaire</th>
-                <th>Quantite</th>
-                <th>Total</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for row in panier %}
-            <tr>
-                <th>{{ row['product'].name }}</th>
-                <td>{{ row['product'].marque }}</td>
-                <td><img src="{{ asset('images/' ~ row['product'].image) }}"></td>
-                <td>{{ row['product'].prix }}&euro;</td>
-                
-                <td><a href="{{ path('app_effacer_quantite_produit', {'id': row['product'].id}) }}"><i class="fa-solid fa-square-minus"></i></a>
-                
-                {{ row['quantity'] }}
-                
-                <a href="{{ path('app_add_produit_panier', {'id': row['product'].id}) }}"><i class="fa-solid fa-square-plus"></i></a></td>
-                <td>{{ row['total']}}&euro;</td>
-                <td>
-                    <a href="{{ path('app_product_show', {'id': row['product'].id}) }}"><i class="fa-solid fa-eye"></i></a>
-                    <a href="{{ path('app_product_edit', {'id': row['product'].id}) }}"><i class="fa-solid fa-file-pen"></i></a>
-                    <a href="{{ path('app_effacer_produit', {'id': row['product'].id}) }}"><i class="fa-solid fa-trash"></i></a>
-                    
-                    
-                </td>
-            </tr>
-            
-        {% endfor %}
-        </tbody>
-    </table>
-</div>
+	<h1 class="titre-index">Détails de votre panier</h1>
+	<div class="container">
+		<div class="container-achat">
+			{% for row in panier %}
+				<div class="product-container">
+					<div class="product-image">
+						<img src="{{ asset('images/' ~ row['product'].image) }}">
+					</div>
+					<div class="product-detail">
+						<div>{{ row['product'].name }}</div>
+						<div>
+                            <a href="{{ path('app_effacer_quantite_produit', {'id': row['product'].id}) }}"><i class="fa-solid fa-square-minus"></i></a>
 
-    <h2>Total de votre commande : {{ totalTTC }}&euro;</h2>
-    {% if app.user %}
-    <button><a href="{{path('app_achat')}}">Valider le panier</button>
-    {% else %}
-    <button><a href="{{path('app_login')}}">Se connecter</button>
-    {% endif %}
-    <a href="{{ path('app_effacer_panier')}}"><i class="fa-solid fa-file-pen"></i></a>
-{% endblock %}
+                        {{ row['quantity'] }}
 
+                            <a href="{{ path('app_add_produit_panier', {'id': row['product'].id}) }}"><i class="fa-solid fa-square-plus"></i></a>
+                        </div>
+						<div class="price">{{ row['product'].prix }}
+							&euro;</div>
 
+					</div>
+					<div class="test">
+						<a href="{{ path('app_effacer_produit', {'id' : row['product'].id}) }}">
+							<button class="danger-button-sm">Supprimer</button>
+						</a>
+					</div>
+				</div>
+			{% endfor %}
+		</div>
+
+		<h2>Total de votre commande :
+			{{ totalTTC }}&euro;</h2>
+		{% if app.user %}
+			<button>
+				<a href="{{path('app_achat')}}">Valider le panier</button>
+			{% else %}
+				<button>
+					<a href="{{path('app_login')}}">Se connecter</button>
+				{% endif %}
+				<a href="{{ path('app_effacer_panier')}}">
+					<i class="fa-solid fa-file-pen"></i>
+				</a>
+			{% endblock %}
