--- a/templates/include/_card.html.twig
+++ b/templates/include/_card.html.twig
@@ -7,7 +7,7 @@
 			<h4>{{product.marque}}</h4>
 			<h5>{{ product.name }}</h5>
 			<h5>{{product.prix}}&euro;</h5>
-			<button>
+			<button class="warning-button">
 				<a href="{{ path('app_user_product_show', {'id' : product.id})}}">Check offer</a>
 			</button>
 		</div>
