--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -41,7 +41,7 @@ body{
 
 .navbar .brand{
     width:135px;
-    margin-right:10px;
+    margin-right:40px;
 }
 
 .navbar li .nav-link:hover{
@@ -127,29 +127,27 @@ body{
     display:flex;
     flex-wrap:wrap;
     border-radius:25px;
-    box-shadow: -5px 5px 15px rgb(22, 22, 22);
-    background-color: rgb(73, 73, 73);
     padding:14px 16px;
-    gap:10px;
+    gap:5px;
+    justify-content: space-around;
 }
 
 .product-card{
-
-    padding: 2%;
-    flex-basis:16%;
-    flex-grow: 1;
+    padding:2%;
     display:flex;
     flex-direction: column;
     border-radius: 23px;
     align-items: center;
-    background-color: #b4b4b4;
+    width:273px;
+    background-color: #2e2e2e;
+    box-shadow: -5px 5px 15px rgb(22, 22, 22);
 }
 
 .product-image img{
     max-width:100%;
 }
 .product-info{
-    color: black;
+    color: rgb(255, 255, 255);
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -220,7 +218,7 @@ input,label {
 .button-register{
     margin:25px;
     height:45px;
-    width:85px;
+    width:fit-content;
     border:none;
     background-color:#4caf50;
     font-size:18px;
@@ -232,7 +230,7 @@ input,label {
 .button-login{
     margin:25px;
     height:45px;
-    width:95px;
+    width:fit-content;
     border:none;
     background-color:#4caf50;
     font-size:18px;
@@ -240,6 +238,12 @@ input,label {
     border-radius:20px;
 
 }
+
+.button-login a{
+    text-decoration: none;
+    color:white;
+}
+
 .button-login:active{
     background-color:#367e39;
 }
@@ -305,14 +309,76 @@ input,label {
     background-color:#7c0400;
 }
 
+.danger-button-md{
+    height:35px;
+    width:fit-content;
+    border:none;
+    background-color:#b80600;
+    font-size:16px;
+    color:white;
+    border-radius:5px;
+}
+
+.danger-button-md:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.danger-button-md:active {
+    background-color:#7c0400;
+}
+
+.danger-button{
+    margin:25px;
+    height:45px;
+    width:fit-content;
+    border:none;
+    background-color:#b80600;
+    font-size:18px;
+    color:white;
+    border-radius:20px;
+
+}
+
+.danger-button a{
+    text-decoration: none;
+    color:white;
+}
+
+
+.danger-button:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.danger-button:active {
+    background-color:#7c0400;
+}
+
+.grey-button{
+    margin:25px;
+    height:45px;
+    width:fit-content;
+    border:none;
+    background-color:#5a5a5a;
+    font-size:18px;
+    color:white;
+    border-radius:20px;
+
+}
+
 /* Fin buttons */
 
 /* Panier */
+.container-panier{
+    margin:48px 52px;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
 
 .container-achat{
     display:flex;
     flex-direction: column;
-    gap:50px;
+    flex-grow:1;
 }
 
 .product-container{
@@ -345,4 +411,24 @@ input,label {
 
 .fa-square-minus,.fa-square-plus{
     color:grey;
+}
+
+.test{
+    width:50%;
+}
+
+.test a{
+    float:right;
+}
+
+.container-validation{
+    text-align: center;
+}
+
+/* Fin Panier */
+
+/* DetailProduit */
+
+.detail-product-image{
+    width:273px;
 }
