--- a/templates/registration/user.html.twig
+++ b/templates/registration/user.html.twig
@@ -3,11 +3,45 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+    <h1 class="titre-index">Veuillez remplir vos informations</h1>
 
     {{ form_start(registrationForm) }}
        
-
-        <button type="submit" class="btn">Register</button>
+    <div class="container-form">
+		<div class="container-login">
+			<div class="form-normal">
+           <div class="form-type">
+					{{ form_row(registrationForm.prenom) }}
+					<i class="fa-solid fa-user fa-lg"></i>
+				</div class="form-type">
+				<div class="form-type">
+					{{ form_row(registrationForm.nom) }}
+					<i class="fa-solid fa-user fa-lg"></i>
+				</div>
+				<div class="form-type">
+					{{ form_row(registrationForm.tel) }}
+					<i class="fa-solid fa-phone fa-lg"></i>
+				</div>
+				<div class="form-type location-dot">
+					{{ form_row(registrationForm.cp) }}
+					<i class="fa-solid fa-location-dot fa-lg"></i>
+				</div>
+				<div class="form-type location-dot">
+					{{ form_row(registrationForm.adresse) }}
+					<i class="fa-solid fa-location-dot fa-lg"></i>
+				</div>
+				<div class="form-type city">
+					{{ form_row(registrationForm.ville) }}
+					<i class="fa-solid fa-city fa-lg"></i>
+				</div>
+				<div class="form-type">
+					{{ form_row(registrationForm.pays) }}
+					<i class="fa-sharp fa-solid fa-flag fa-lg"></i>
+				</div>
+            </div>
+            <button type="submit" class="enregistrement button-register">Enregistrer</button>
+        </div>
+    </div>
+        
     {{ form_end(registrationForm) }}
 {% endblock %}
